--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Nunito&family=Palanquin+Dark:wght@500&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Nike Store</title>
+    <title>GreenHub</title>
 </head>
 
 <body>
     <nav id="nav">
         <div class="navTop">
             <div class="navItem">
-                <h2>EcommerceStore.com</h2>
+                <h2>greenhub.com</h2>
                 <!-- <noscript><img decoding="async" src="./img/sneakers.png" alt=""></noscript><img class="lazy"  decoding="async" src='data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20%20%22%3E%3C/svg%3E' data-src="./img/sneakers.png" alt=""> -->
             </div>
             <div class="navItem">
@@ -29,11 +29,11 @@
             </div>
         </div>
         <div class="navBottom">
-            <h3 class="menuItem">AIR FORCE</h3>
-            <h3 class="menuItem">JORDAN</h3>
-            <h3 class="menuItem">BLAZER</h3>
-            <h3 class="menuItem">CRATER</h3>
-            <h3 class="menuItem">HIPPIE</h3>
+            <h3 class="menuItem">FRUITS</h3>
+            <!-- <h3 class="menuItem">JORDAN</h3> -->
+            <h3 class="menuItem">VEGETABLES</h3>
+            <!-- <h3 class="menuItem">CRATER</h3> -->
+            <h3 class="menuItem">HANDY DECOR</h3>
         </div>
     </nav>
     <div class="slider">
