--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
-                <img decoding="async" src="./img/air.png" alt="" class="sliderImg" id="firsts">
+                <img decoding="async" src="./img/delecious.png" alt="" class="sliderImg" id="firsts">
+                <!-- <img decoding="async" src="./img/air.png" alt="" class="sliderImg" id="firsts"> -->
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">Rs.1999</h2>
@@ -216,11 +217,11 @@
             <div class="footerMenu">
                 <h1 class="fMenuTitle">Products</h1>
                 <ul class="fList">
-                    <li class="fListItem">Air Force</li>
-                    <li class="fListItem">Air Jordan</li>
-                    <li class="fListItem">Blazer</li>
-                    <li class="fListItem">Crater</li>
-                    <li class="fListItem">Hippie</li>
+                    <li class="fListItem">Fruits</li>
+                    <!-- <li class="fListItem">Air Jordan</li> -->
+                    <li class="fListItem">Vegetables</li>
+                    <!-- <li class="fListItem">Crater</li> -->
+                    <li class="fListItem">Home Decor</li>
                 </ul>
             </div>
         </div>
