--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- <img decoding="async" src="./img/air.png" alt="" class="sliderImg" id="firsts"> -->
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">Rs.1999</h2>
+                <h2 class="sliderPrice">Staring from<br>Rs 79</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
