--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </div>
         <div class="feature">
             <noscript><img decoding="async" class="featureIcon" src="./img/return.png" alt=""></noscript><img decoding="async" class=" lazy  featureIcon" src='data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20%20%22%3E%3C/svg%3E' data-src="./img/return.png" alt="">
-            <span class="featureTitle">30 DAYS RETURN</span>
-            <span class="featureDesc">No question return and easy refund in 14 days.</span>
+            <span class="featureTitle">1 DAY RETURN</span>
+            <span class="featureDesc">No question return and easy refund in 2 days.</span>
         </div>
         <div class="feature">
             <noscript><img decoding="async" class="featureIcon" src="./img/gift.png" alt=""></noscript><img decoding="async" class=" lazy  featureIcon" src='data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20%20%22%3E%3C/svg%3E' data-src="./img/gift.png" alt="">
@@ -154,7 +154,7 @@
     </div>
     <div class="gallery">
         <div class="galleryItem">
-            <h1 class="galleryTitle">Be Yourself!</h1>
+            <h1 class="galleryTitle">Belive in US!</h1>
             <noscript><img decoding="async" src="https://images.pexels.com/photos/13159244/pexels-photo-13159244.jpeg"
                 alt="" class="galleryImg"></noscript><img decoding="async" src='data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20%20%22%3E%3C/svg%3E' data-src="https://images.pexels.com/photos/13159244/pexels-photo-13159244.jpeg"
                 alt="" class=" lazy  galleryImg">
@@ -163,7 +163,7 @@
             <noscript><img decoding="async" src="https://images.pexels.com/photos/2982100/pexels-photo-2982100.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                 alt="" class="galleryImg"></noscript><img decoding="async" src='data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20%20%22%3E%3C/svg%3E' data-src="https://images.pexels.com/photos/2982100/pexels-photo-2982100.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                 alt="" class=" lazy  galleryImg">
-            <h1 class="galleryTitle">This is the First Day of Your New Life</h1>
+            <h1 class="galleryTitle"> Embrace a new chapter of nourishment and taste the difference as you start each day with the goodness of nature</h1>
         </div>
         <div class="galleryItem">
             <h1 class="galleryTitle">Just Do it!</h1>
