--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img decoding="async" src="./img/delecious.png" alt="" class="sliderImg" id="firsts">
                 <!-- <img decoding="async" src="./img/air.png" alt="" class="sliderImg" id="firsts"> -->
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
+                <h1 class="sliderTitle">Welcome to greenhub! Discover the freshest, tastiest vegetables for a healthier you. Happy shopping!</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPPrice">Staring from<br>Rs 79</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
