--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img decoding="async" src="./img/delecious.png" alt="" class="sliderImg" id="firsts">
                 <!-- <img decoding="async" src="./img/air.png" alt="" class="sliderImg" id="firsts"> -->
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">Welcome to greenhub! Discover the freshest, tastiest vegetables for a healthier you. Happy shopping!</br> NEW</br> SEASON</h1>
+                <h1 class="sliderTitle">"Welcome to greenhub! Discover the freshest, tastiest vegetables for a healthier you. Happy shopping!"</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPPrice">Staring from<br>Rs 79</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
@@ -154,7 +154,7 @@
     </div>
     <div class="gallery">
         <div class="galleryItem">
-            <h1 class="galleryTitle">Belive in US!</h1>
+            <h1 class="galleryTitle">Believe in US!</h1>
             <noscript><img decoding="async" src="https://images.pexels.com/photos/13159244/pexels-photo-13159244.jpeg"
                 alt="" class="galleryImg"></noscript><img decoding="async" src='data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20%20%22%3E%3C/svg%3E' data-src="https://images.pexels.com/photos/13159244/pexels-photo-13159244.jpeg"
                 alt="" class=" lazy  galleryImg">
